--- a/calendario/templates/calendario/evento-modal.html
+++ b/calendario/templates/calendario/evento-modal.html
@@ -29,12 +29,11 @@
   }
 </style>
 
-{% if user.tipo_de_usuario == 2 or user.tipo_de_usuario == 4 %}
+{% if user.prof_a %}
   <script src="{% static 'js/calendario_admin.js' %}"></script>
 {% endif %}
 
 <script>
-  {% comment %} let calendar = null; {% endcomment %}
   var pessoas = {};
   {% for pessoa in pessoas.insper %}
     pessoas["{{pessoa.id}}"] = "{{pessoa.get_full_name}}"
@@ -222,10 +221,10 @@
       },
       error: function (request, status, error) {
         $("#carregando_arquivo").hide();
-        {% if user.tipo_de_usuario == 4 %} 
+        {% if user.admin %} 
+          console.log("error"+request.responseText);  
           alert(request.responseText);
           jQuery("body").html(request.responseText.replace(/\n/g,"<br>"));
-          console.log("error"+request.responseText);
         {% else %}
           jQuery("body").html("Erro no servidor. Por favor contactar: <a href='mailto:lpsoares@insper.edu.br'>lpsoares@insper.edu.br</a>");
         {% endif %}
@@ -246,15 +245,13 @@
         
         <div class="modal-header">
           <h5 class="modal-title">
-            <span lang="pt">Evento</span>
-            <span lang="en" style="display: none;">Event</span>
+            {% lng "Evento" "Event" %}
           </h5>
 
-          {% if user.tipo_de_usuario != 4 %}
+          {% if not user.admin %}
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <span id="permissao" style="color:red; text-decoration: underline solid red">
-              <span lang="pt">Alterações Restritas ao Administrador</span>
-              <span lang="en" style="display: none;">Restricted changes to the Administrator</span>
+              {% lng "Alterações Restritas ao Administrador" "Restricted changes to the Administrator" %}
             </span>
           {% endif %}
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -266,8 +263,7 @@
           <input type="hidden" name="event-index">
             <div class="form-group row">
               <label for="event-type" class="col-sm-4 control-label">
-                <span lang="pt">Tipo</span>
-                <span lang="en" style="display: none;">Type</span>
+                {% lng "Tipo" "Type" %}
               </label>
               <div class="col-sm-8">
                 <select id="event-type" name="event-type" class="form-control">
@@ -285,8 +281,7 @@
 
             <div class="form-group row">
               <label for="event-atividade" class="col-sm-4 control-label">
-                <span lang="pt">Atividade (nome)</span>
-                <span lang="en" style="display: none;">Activity (name)</span>
+                {% lng "Atividade (nome)" "Activity (name)" %}
               </label>
               <div class="col-sm-8">
                 <input id="event-atividade" name="event-atividade" type="text" class="form-control" maxlength="{% max_length Evento "atividade" %}">
@@ -295,14 +290,15 @@
 
             <div class="form-group row">
               <label for="min-date" class="col-sm-4 control-label">
-                <span lang="pt">Datas</span>
-                <span lang="en" style="display: none;">Dates</span>
+                {% lng "Datas" "Dates" %}
               </label>
               <div class="col-sm-8">
                 <div class="input-group input-daterange" data-provide="datepicker">
                   <input id="min-date" name="event-start-date" type="text" class="form-control">
                   <div class="input-group-prepend input-group-append">
-                    <div class="input-group-text">até</div>
+                    <div class="input-group-text">
+                      {% lng "até" "to" %}
+                    </div>
                   </div>
                   <input id="max-date" name="event-end-date" type="text" class="form-control">
                 </div>
@@ -318,8 +314,7 @@
 
             <div class="form-group row">
               <label for="event-responsavel" class="col-sm-4 control-label">
-                <span lang="pt">Responsável</span>
-                <span lang="en" style="display: none;">Responsible</span>
+                {% lng "Responsável" "Responsible" %}
               </label>
               <div class="col-sm-8">
                 <select name="event-responsavel" id="event-responsavel" class="form-control" title="Selecione responsável">
@@ -340,8 +335,7 @@
 
             <div class="form-group row">
               <label for="event-descricao" class="col-sm-4 control-label">
-                <span lang="pt">Descrição</span>
-                <span lang="en" style="display: none;">Description</span>
+                {% lng "Descrição" "Description" %}
               </label>
               <div class="col-sm-8">
                 <textarea class="form-control" id="event-descricao" name="event-descricao" rows="3" maxlength="{% max_length Evento "descricao" %}"></textarea>
@@ -350,8 +344,7 @@
 
             <div class="form-group row">
               <label for="event-observation" class="col-sm-4 control-label">
-                <span lang="pt">Observações</span>
-                <span lang="en" style="display: none;">Observations</span>
+                {% lng "Observações" "Observations" %}
               </label>
               <div class="col-sm-8">
                 <input id="event-observation" name="event-observation" type="text" class="form-control" maxlength="{% max_length Evento "observacao" %}">
@@ -360,8 +353,7 @@
 
             <div class="form-group row">
               <label style="line-height: normal;" for="event-material" class="col-sm-4 control-label">
-                <span lang="pt">Material (documentos)</span>
-                <span lang="en" style="display: none;">Material (documents)</span>
+                {% lng "Material (documentos)" "Material (documents)" %}
                 {% comment %} <small style="line-height: 1.0 !important;">Só mostrará arquivos com data no passado.</small> {% endcomment %}
               </label>
               
