--- a/documentos/templates/documentos/biblioteca_link.html
+++ b/documentos/templates/documentos/biblioteca_link.html
@@ -143,7 +143,7 @@
                 href="` + data.link + `" target="_blank" rel="noopener noreferrer">
                 <span class="texto-curto style="width: 4em;">DSpace</span>
                 <span class="texto-longo" style="width: 12em;">Link&nbsp;Biblioteca&nbsp;(DSpace)</span>`
-            {% if user.tipo_de_usuario == 4 %}
+            {% if user.admin %}
               ancora += `
                 <span class="open-modal" data-url="{% url 'biblioteca_link' %}{{relatorio.pk}}">
                   <i class="fas fa-pencil-alt"></i>
