--- a/documentos/templates/documentos/certificados_submetidos.html
+++ b/documentos/templates/documentos/certificados_submetidos.html
@@ -10,7 +10,6 @@
   {% load escape_emails %}
   {% load nospaces %}
   {% load linguas %}
-
   <link rel="stylesheet" href="{% static 'bootstrap-select-1.13.14/dist/css/bootstrap-select.min.css' %}">
   <script src="{% static 'bootstrap-select-1.13.14/dist/js/bootstrap-select.min.js' %}"></script>
 
@@ -50,8 +49,7 @@
       <div class="input-group input-group-sm mt-1 flex-nowrap">
           <div class="input-group-prepend">
             <label class="to_label input-group-text" for="filterEdicao" onClick="carrega_pagina()"><span class="to_hide">
-              <span lang="pt">Tipos</span>
-              <span lang="en">Type</span>
+              {% lng "Tipos" "Types" %}
             </span></label>
           </div>
           <select id="tipos" class="selectpicker form-control form-control-sm" data-style="mr-sm border " data-width="10em"
@@ -110,8 +108,7 @@
     <br><br>
     <h4>
       {{ gerados }}
-      <span lang="pt">novos certificados gerados.</span>
-      <span lang="en" style="display: none;">new certificates generated.</span>
+      {% lng "novos certificados gerados." "new certificates generated." %}
     </h4>
   {% endif %}
 
@@ -140,11 +137,11 @@
 
             <td>
               <b style="font-weight: bold; font-size: 1.2em;">{{certificado.tipo_certificado}}</b><br>
-              <b>Nome:</b>
+              <b>{% lng "Nome" "Name" %}</b>:
               {% if certificado.usuario %}
-                {% if certificado.usuario.tipo_de_usuario == 1 %}
+                {% if certificado.usuario.estud %}
                   <a href="{% url 'estudante_detail' certificado.usuario.aluno.id %}">{{certificado.usuario.get_full_name}}</a> (estudante)<br>
-                {% elif certificado.usuario.tipo_de_usuario == 2 or certificado.usuario.tipo_de_usuario == 4 %}
+                {% elif certificado.usuario.prof_a %}
                   <a href="{% url 'professor_detail' certificado.usuario.professor.id %}">{{certificado.usuario.get_full_name}}</a> (professor)<br>
                 {% else %}
                   {{certificado.usuario.get_full_name}}<br>
@@ -152,7 +149,8 @@
               {% endif %}
 
               {% if certificado.projeto %}
-                <b>Data do certificado:</b> {{certificado.data|date:"DATE_FORMAT"}}<br>
+                <b>{% lng "Data do certificado" "Certificate date" %}:</b>
+                {{certificado.data|date:"DATE_FORMAT"}}<br>
               {% endif %}
 
               {% if certificado.projeto %}
@@ -165,13 +163,13 @@
 
               {% if certificado.documento %}
                 {% comment %} <a href="{{ certificado.documento.url }}"><img style="max-height:240px;" src="{{ certificado.documento.url }}" alt="Certificado {{ certificado.usuario }} {{ certificado.projeto }}"></a><br> {% endcomment %}
-                <b>Certificado:</b> 
+                <b>{% lng "Certificado" "Certificate" %}:</b> 
                 <a href="{{ certificado.documento.url }}" target="_blank" rel="noopener noreferrer">{{ certificado.file_name }}</a><br>
               {% endif %}
               
               <a data-toggle="tooltip" data-html="true" animation="true" title="Janela de Mensagem" class="open-modal"
                 data-url="{% url 'mensagem_email' 'certificado' certificado.id %}" href="{% url 'mensagem_email' 'certificado' certificado.id %}"> 
-                &#x2709; Enviar certificado
+                &#x2709; {% lng "Enviar certificado" "Send certificate" %}
               </a>
             </td>
           </tr>
@@ -179,7 +177,9 @@
           {% endfor %}
         
         {% else %}
-          <tr><td style="border: 0px;">Não existem certificados.</td></tr>
+          <tr><td style="border: 0px;">
+            {% lng "Não existem certificados." "There are no certificates." %}
+          </td></tr>
         {% endif %}
       
       </table>
