--- a/documentos/templates/documentos/tabela_documentos.html
+++ b/documentos/templates/documentos/tabela_documentos.html
@@ -6,8 +6,8 @@
 {% endcomment %}
 
 {% block head %}
-
   {% load static %}
+  {% load linguas %}
   {% include "tabelas_includes.html" %}
 
   <style>
@@ -34,150 +34,94 @@
 
   {% include "edicoes.html" with com_cursos=True %}
   {% include "informacoes_ml.html" %}
-  <br><br>
+  <br>
   
   <div class="atualizar">
-
     {% include "tabelas_top_ml.html" with tabela="Projetos" cabecalhos=cabecalhos %}
-          {% for projeto in projetos %} 
-              <tr class="item">
-                <td>
-                  <a class="imprimir" href="{% url 'projeto_completo' projeto.id %}">
-                    {% if projeto.titulo_final and projeto.titulo_final != projeto.proposta.titulo %}
-                      {{projeto.titulo_final}}
-                      <span class="tit_ori">
-                        <br><small>Título original da proposta: {{projeto.proposta.titulo}}</small>
-                      </span>
-                    {% else %}
-                      {{projeto.get_titulo}}
-                    {% endif %}
-                    {% include "tipo_projeto.html" %}
-                  </a>
-                </td>
-                
+      {% for projeto in projetos %} 
+        <tr class="item">
 
-                <!-- Estudantes -->
-                <td style="min-width:18em;">
-                  <small>
-                  <ul class="grupo">
-                    {% for alocacao in projeto.alocacao_set.all %}
-                      <li>
-                        <a class="imprimir" href="{% url 'estudante_detail' alocacao.aluno.id %}">
-                          {{alocacao.aluno}}
-                        </a>
-                        <span class="curso">
-                          [{{ alocacao.aluno.curso2 }}]
-                        </span>
-                      </li>
-                    {% endfor %}
-                  </ul>
-                  </small>
-                </td>
+          {% include "projetos/includes/td_projeto.html" with projeto=projeto tit_proposta=True %}
 
-                <!-- Orientador -->
-                <td>
-                  {% if projeto.orientador %}
-                    <a class="imprimir" href="{% url 'professor_detail' projeto.orientador.id %}">
-                      {{ projeto.orientador }}
-                    </a>
-                  {% else %}
-                    ORIENTADOR NÃO DEFINIDO
-                  {% endif %}
+          <!-- Estudantes -->
+          <td style="min-width:18em;">
+            <ul class="grupo">
+              {% for alocacao in projeto.alocacao_set.all %}
+                <li><small>
+                  <a class="imprimir" href="{% url 'estudante_detail' alocacao.aluno.id %}">{{alocacao.aluno}}</a>
+                  <span class="curso">[{{ alocacao.aluno.curso2 }}]</span>
+                </small></li>
+              {% endfor %}
+            </ul>
+          </td>
 
-                  {% with coorientadores=projeto.coorientador_set.all %}
-                    {% if coorientadores %}
-                    <span class="coorientadores">
-                    <br>coorientação:
-                      {% for coorientador in coorientadores %}
-                          <a class="imprimir" href="{% url 'user_detail' coorientador.usuario.id %}">
-                            {{coorientador.usuario.get_full_name}} 
-                          </a>
-                          {% comment %} <a class="email" href="mailto:{{coorientador.usuario.email}}">&lt;{{coorientador.usuario.email}}&gt;</a> {% endcomment %}
-                          {% if not forloop.last %}; {% endif %}
-                      {% endfor %}
-                      </span>
-                    {% endif %}
-                  {% endwith %}
-                </td>
-
-                <!-- Período -->
-                <td style="text-align:center">
-                    {{projeto.ano}}.{{projeto.semestre}}
-                </td>
-
-                <!-- Organização -->
-                <td>
-                  {% if projeto and projeto.organizacao %}
-                    <a class="imprimir" href="{% url 'organizacao_completo' projeto.organizacao.id %}">
-                      {{ projeto.organizacao.sigla }}
-                    </a>
-                  {% else %}
-                    ORGANIZAÇÃO NÃO DEFINIDA
-                  {% endif %}
-                </td>
-
-                <!-- Somente Banca Final, as outras não são listadas -->
-                <td>
-                  <small>
-                    <ul class="grupo">
-                      {% for membro in projeto.get_banca_final.membros %}
-                        <li><a class="imprimir" href="{% url 'user_detail' membro.id %}">{{membro.get_full_name}}</a></li>
-                      {% endfor %}
-                    </ul>
-                  </small>
-                </td>
-              
-                <!-- Documentos -->
-                <td  style="text-align:left;min-width:18em;"><small>
-                  {% for documento in projeto.documento_set.all %} 
-                    {% if documento.confidencial %}
-                      <span class="confidencial">
-                       <i style="font-size: 0.8em;" data-toggle="tooltip" data-html="true" animation="true" title="confidencial" class="fa fa-lock"></i>
-                    {% else %}
-                      <span class="publico">
-                      <i style="font-size: 0.8em;" data-toggle="tooltip" data-html="true" animation="true" title="público" class="fa fa-unlock"></i>
-                    {% endif %}
-                    {% if documento.documento and documento.link %}
-                      {{documento.tipo_documento}}
-                      <a href="{{request.scheme}}://{{request.get_host}}{{documento.documento.url}}" target="_blank" rel="noopener noreferrer">(documento)</a>
-                      <a href="{{documento.link}}" target="_blank" rel="noopener noreferrer">(link)</a>
-                      {% if documento.lingua_do_documento == 1 %} {% comment %} Inglês {% endcomment %}
-                        <sup>(Inglês)</sup>
-                      {% endif %}
-                      <br>
-                    {% else %}
-                      {% if documento.documento %}
-                        <a href="{{request.scheme}}://{{request.get_host}}{{documento.documento.url}}" target="_blank" rel="noopener noreferrer">{{documento.tipo_documento}}</a>
-                        {% if documento.lingua_do_documento == 1 %} {% comment %} Inglês {% endcomment %}
-                          <sup>(Inglês)</sup>
-                        {% endif %}
-                        <br>
-                      {% endif %}
-                      {% if documento.link %}
-                        <a href="{{documento.link}}" target="_blank" rel="noopener noreferrer">{{documento.tipo_documento}}</a>
-                        {% if documento.lingua_do_documento == 1 %} {% comment %} Inglês {% endcomment %}
-                          <sup>(Inglês)</sup>
-                        {% endif %}
-                        <br>
-                      {% endif %}
-                    {% endif %}
-                  </span>
+          {% include "academica/includes/td_orientador.html" with orientador=projeto.orientador coorientadores=projeto.coorientador_set.all %}
+          <td style="text-align:center">{{projeto.ano}}.{{projeto.semestre}}</td>
+          {% include "organizacoes/includes/td_organizacao.html" with organizacao=projeto.organizacao %}
+          
+          <!-- Somente Banca Final, as outras não são listadas -->
+          <td>
+            <small>
+              <ul class="grupo">
+                {% for membro in projeto.get_banca_final.membros %}
+                  <li><a class="imprimir" href="{% url 'user_detail' membro.id %}">{{membro.get_full_name}}</a></li>
                 {% endfor %}
-              </small></td>
-            </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-    </div>
+              </ul>
+            </small>
+          </td>
+        
+          <!-- Documentos -->
+          <td style="text-align:left;min-width:18em;">
+            <small>
+              {% for documento in projeto.documento_set.all %} 
+                {% if documento.confidencial %}
+                  <span class="confidencial">
+                    <i style="font-size: 0.8em;" data-toggle="tooltip" data-html="true" animation="true" title="confidencial" class="fa fa-lock"></i>
+                {% else %}
+                  <span class="publico">
+                  <i style="font-size: 0.8em;" data-toggle="tooltip" data-html="true" animation="true" title="público" class="fa fa-unlock"></i>
+                {% endif %}
+                {% if documento.documento and documento.link %}
+                  {{documento.tipo_documento}}
+                  <a href="{{request.scheme}}://{{request.get_host}}{{documento.documento.url}}" target="_blank" rel="noopener noreferrer">(documento)</a>
+                  <a href="{{documento.link}}" target="_blank" rel="noopener noreferrer">(link)</a>
+                  {% if documento.lingua_do_documento == 1 %} {% comment %} Inglês {% endcomment %}
+                    <sup>(Inglês)</sup>
+                  {% endif %}
+                  <br>
+                {% else %}
+                  {% if documento.documento %}
+                    <a href="{{request.scheme}}://{{request.get_host}}{{documento.documento.url}}" target="_blank" rel="noopener noreferrer">{{documento.tipo_documento}}</a>
+                    {% if documento.lingua_do_documento == 1 %} {% comment %} Inglês {% endcomment %}
+                      <sup>(Inglês)</sup>
+                    {% endif %}
+                    <br>
+                  {% endif %}
+                  {% if documento.link %}
+                    <a href="{{documento.link}}" target="_blank" rel="noopener noreferrer">{{documento.tipo_documento}}</a>
+                    {% if documento.lingua_do_documento == 1 %} {% comment %} Inglês {% endcomment %}
+                      <sup>(Inglês)</sup>
+                    {% endif %}
+                    <br>
+                  {% endif %}
+                {% endif %}
+              </span>
+              {% endfor %}
+            </small>
+          </td>
+        </tr>
+      {% endfor %}
+    {% include "tabelas_bottom.html" %}
   </div>
 
-  {% if user.tipo_de_usuario == 4 %}
+  {% if user.admin %}
     <span class="esconder">
-      <a 
-      href="#"
-      class="open-documento" style="cursor:pointer;"
+      <a  href="#"
+       class="open-documento" style="cursor:pointer;"
           data-url="{% url 'adiciona_documento' %}"
-          ><i class="fas fa-plus"></i> Adicionar novo documento</a>
+          ><i class="fas fa-plus"></i>
+          {% lng "Adicionar novo documento" "Add new document" %}
+        </a>
     </span>
     {% include "documento-modal.html" %}
   {% endif %}
