--- a/professores/templates/professores/bancas_tabela_alocacao_completa.html
+++ b/professores/templates/professores/bancas_tabela_alocacao_completa.html
@@ -42,15 +42,15 @@
           {% for membro, bancas in membros.items %}
             <tr class="item">
               <td>
-                {% if membro.tipo_de_usuario == 2 %}
+                {% if membro.prof %}
                   <a class="imprimir" href="{% url 'professor_detail' membro.professor.id %}">
                     {{membro.get_full_name}}
                   </a>
-                {% elif membro.tipo_de_usuario == 3 %}
+                {% elif membro.parc %}
                   <a class="imprimir" href="{% url 'parceiro_detail' membro.parceiro.id %}">
                     {{membro.get_full_name}}
                   </a>
-                {% elif membro.tipo_de_usuario == 4 %}
+                {% elif membro.admin %}
                   <a class="imprimir" href="{% url 'professor_detail' membro.professor.id %}">
                     {{membro.get_full_name}}
                   </a>
