--- a/templates/display_notas_individuais.html
+++ b/templates/display_notas_individuais.html
@@ -19,17 +19,14 @@
   var peso = 0.0;
 </script>
 
-{% if user.tipo_de_usuario == 4 %}
+{% if user.admin %}
   <a style="color:black" href="{% url 'edita_notas' alocado.id %}">
 {% endif %}
 {% if notas %}
 
 <table class="one-line"><tbody>
   <tr>
-    <td><b>
-      <span lang="pt">Avaliações</span>
-      <span lang="en" style="display:none">Evaluations</span>
-    </b></td>
+    <td><b>{% lng "Avaliações" "Evaluations" %}</b></td>
     {% for aval, nota, peso, descr in notas %}
       {% if user.tipo_de_usuario != 1 or alocado|exibe_notas:aval %} <!-- Filtra certas avaliações para estudantes não verem -->
         <td style="cursor:pointer; white-space: nowrap;" data-toggle="tooltip" data-html="true" animation="true" 
@@ -47,9 +44,9 @@
   
     <td>
     <b>
-      <span lang="pt">Média Final</span>
-      <span lang="en" style="display:none">Final Grade</span>
-      = <span id="media{{alocado.id}}"></span> <span id="aviso{{alocado.id}}"></span></b>    
+      {% lng "Média Final" "Final Grade" %}
+      = <span id="media{{alocado.id}}"></span> <span id="aviso{{alocado.id}}"></span>
+    </b>    
     <script>
       if(peso > 0.0) {
         {% with media=alocado|get_media_alocacao %}
@@ -77,7 +74,7 @@
 
 {% endif %}
 
-{% if user.tipo_de_usuario == 4 %}
+{% if user.admin %}
   </a>
 {% endif %}
 
@@ -89,10 +86,7 @@
       <div style="position: relative; height:203px; width:406px;"><canvas id="radial-grupo{{alocado.id}}"></canvas></div>
     </div>
   </div>
-  <small>
-    <span lang="pt">Obs: Exibição radar supõe mesmo peso para todas as avaliações</span>
-    <span lang="en" style="display:none">Note: Radar display assumes same weight for all evaluations</span>
-  </small>
+  <small>{% lng "Obs: Exibição radar supõe mesmo peso para todas as avaliações" "Note: Radar display assumes same weight for all evaluations" %}</small>
 
   {% with medias_oo=alocado|get_medias_oo %}
     <script>
