--- a/users/templates/users/parceiro_detail.html
+++ b/users/templates/users/parceiro_detail.html
@@ -122,7 +122,7 @@
     
   {% endif %}
 
-  {% if user.tipo_de_usuario == 4 %}
+  {% if user.admin %}
     <a href="{% url 'edita_usuario' parceiro.user.id %}">
       <button class="btn btn-primary" style="float: right;">Editar</button>
     </a>
